# CodeSentinel

./: .dockerignore  .env.example  .gitignore  DEVLOG.md  LICENSE  METRICS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-eval.txt  requirements.txt  setup.sh
app/: config.py  db.py  db_models.py  main.py
app/agent/: context_builder.py  graph.py  intent_routing.py  planner.py  reranker.py  retriever.py  reviewer.py
app/api/: routes.py
app/prompts/: planner.txt  reviewer.txt
app/rag/: chunker.py  doc_chunker.py  embedding.py  parser.py  vectordb.py
app/services/: indexing.py  metadata.py  repo_loader.py
docs/: DEVLOG(Organized).md  TECH_SPEC.md  USER_MANUAL.md
frontend/: app.py
tests/: beir_retriever_eval.py  eval_labels.json  eval_metrics.py  swe_qa_ragas_eval.py
tests/data/swe_qa/: README.md
